# maikol-utils

./: README.md  pyproject.toml  test.py  usage_examples.ipynb
maikol-utils/: __init__.py  print_utils.py
maikol_utils/: __init__.py  file_utils.py  print_utils.py
outputs/: users.json
temp/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
